# bitkot

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  BUILD.bazel  GRADLE.md  Makefile  README.md  WORKSPACE  settings.gradle.kts
.ijwb/: .bazelproject
patches/: bazel_distribution.diff
src/bzl/copy_protos/: copy_protos.bzl
src/bzl/googleapis/: googleapis.bzl
src/bzl/gradle_utils/: gradle_utils.bzl
src/bzl/maven/: BUILD.bazel
src/bzl/utility/: func_name.bzl
src/conf/: BUILD.bazel  build.gradle.kt.tpl
src/kotlin/: BUILD.bazel  defs.bzl
src/kotlin/cache/: BUILD.bazel  cache.kt  cache_config.kt
src/kotlin/cache/iface/: BUILD.bazel  cache_iface.kt
src/kotlin/cache/local/: BUILD.bazel  local.kt  local_cache.kt  local_config.kt
src/kotlin/cache/remote/: BUILD.bazel  rate_limiter.kt  remote.kt  remote_config.kt
src/kotlin/cache/test/: BUILD.bazel  cache_test.kt  local_cache_test.kt  remote_cache_test.kt
src/kotlin/domain_socket/: BUILD.bazel  domain_socket.kt
src/kotlin/grpc_utils/: BUILD.bazel  grpc_utils.kt
src/kotlin/io/bitrise/bitkot/cache/: BUILD.bazel  cache.kt  cache_config.kt
src/kotlin/io/bitrise/bitkot/cache/iface/: BUILD.bazel  cache_iface.kt
src/kotlin/io/bitrise/bitkot/cache/local/: BUILD.bazel  local.kt  local_cache.kt  local_config.kt
src/kotlin/io/bitrise/bitkot/cache/remote/: BUILD.bazel  rate_limiter.kt  remote.kt  remote_config.kt
src/kotlin/io/bitrise/bitkot/cache/test/: BUILD.bazel  cache_test.kt  local_cache_test.kt  remote_cache_test.kt
src/kotlin/io/bitrise/bitkot/domain_socket/: BUILD.bazel  domain_socket.kt
src/kotlin/io/bitrise/bitkot/grpc_utils/: BUILD.bazel  grpc_utils.kt
src/kotlin/io/bitrise/bitkot/proto_utils/: BUILD.bazel  digest_utils.kt
src/kotlin/io/bitrise/bitkot/rsocket/: BUILD.bazel  rsocket_client.kt
src/kotlin/io/bitrise/bitkot/utils/: BUILD.bazel  concurrent.kt  coro.kt  hash.kt  io.kt  log.kt  misc.kt  paths.kt  platform.kt  str.kt  sync.kt
src/kotlin/io/bitrise/bitkot/utils/test/: BUILD.bazel  coro_test.kt
src/kotlin/proto_utils/: BUILD.bazel  digest_utils.kt
src/kotlin/utils/: coro.kt  hash.kt  io.kt  log.kt  paths.kt  platform.kt  str.kt
src/kotlin/utils/test/: BUILD.bazel  coro_test.kt
src/proto/: BUILD.bazel
src/proto/kv_storage/: BUILD.bazel  kv_storage.proto
