load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = ["@com_github_jetbrains_kotlin//:kotlinx-serialization-compiler-plugin"],
)

kt_jvm_library(
    name = "serialization",
    srcs = [],
    exported_compiler_plugins = [":serialization_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm"],
)
