load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "cache",
    srcs = [
        "cache.kt",
        "cache_config.kt",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/kotlin:serialization",
        "//src/kotlin/cache/iface",
        "//src/kotlin/cache/local",
        "//src/kotlin/cache/remote",
        "//src/kotlin/proto_utils",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)
