load("@com_github_bitrise_io_bitkot//src/kotlin:defs.bzl", "defs")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "grpc_utils",
    srcs = ["grpc_utils.kt"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/kotlin/utils",
        "@maven//:com_google_protobuf_protobuf_kotlin",
    ] + defs.GRPC_DEPS,
)
