load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "proto_utils",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/kotlin/utils",
        "//src/proto:remote_execution_java_proto",
        "//src/proto:remote_execution_kt_proto",
    ],
)
