load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "local",
    srcs = [
        "local.kt",
        "local_cache.kt",
        "local_config.kt",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/kotlin:serialization",
        "//src/kotlin/cache/iface",
        "//src/kotlin/proto_utils",
    ],
)
