load("@com_github_bitrise_io_bitkot//src/kotlin:defs.bzl", "defs")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "remote",
    srcs = [
        "rate_limiter.kt",
        "remote.kt",
        "remote_config.kt",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/kotlin:serialization",
        "//src/kotlin/cache/iface",
        "//src/kotlin/grpc_utils",
        "//src/kotlin/proto_utils",
        "//src/kotlin/utils",
        "//src/proto:bytestream_kt_grpc_proto",
        "//src/proto:bytestream_kt_proto",
        "//src/proto:remote_execution_kt_grpc_proto",
        "//src/proto:remote_execution_kt_proto",
    ] + defs.GRPC_DEPS,
)
