load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "domain_socket",
    srcs = ["domain_socket.kt"],
    visibility = ["//visibility:public"],
    deps = [
        "@io_grpc_grpc_java//netty",
        "@io_netty_netty_transport_native_unix_common//jar",
        "@io_netty_netty_transport_native_epoll//jar",
        "@io_netty_netty_transport_native_kqueue//jar",
        "//src/kotlin/io/bitrise/bitkot/utils",
        "@io_netty_netty_transport_native_epoll_linux_x86_64//jar",
        "@io_netty_netty_transport_native_epoll_linux_aarch_64//jar",
        "@io_netty_netty_transport_native_kqueue_osx_x86_64//jar",
        "@io_netty_netty_transport_native_kqueue_osx_aarch_64//jar",
    ],
)
