load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "iface",
    srcs = ["cache_iface.kt"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/kotlin/io/bitrise/bitkot/utils",
        "//src/proto:remote_execution_java_proto",
        "//src/proto:remote_execution_kt_proto",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)
